--- a/blog/source/_posts/软连接.md
+++ b/blog/source/_posts/软连接.md
@@ -11,7 +11,7 @@ date: 2025-08-31 10:08:36
 
 ## 遇到的情况
 
-在创建 Hexo 博客时，我发现使用 `npm install hexo-theme-next` 后，themes 目录被创建在了 blog 的同级目录。经过了解，我意识到正确的位置应该是在 blog 的下级目录。
+在创建 [Hexo](https://hexo.io/) 博客时，我发现使用 `npm install hexo-theme-next` 后，themes 目录被创建在了 blog 的同级目录。经过了解，我意识到正确的位置应该是在 blog 的下级目录。
 
 ## 解决方案的思考
 
@@ -31,7 +31,9 @@ cp -r node_modules/hexo-theme-next themes/next
 
 ### 方案二：软连接（符号链接）
 
-经过进一步了解，我发现了软连接这个解决方案。它的语法为：`ln -s [源文件/目录] [链接名]`
+经过进一步了解，我发现了软连接这个解决方案。关于软连接的详细说明，可以参考 [Linux ln 命令](https://www.runoob.com/linux/linux-comm-ln.html)。
+
+它的语法为：`ln -s [源文件/目录] [链接名]`
 
 ```bash
 ln -s ../node_modules/hexo-theme-next themes/next
@@ -49,7 +51,7 @@ ln -s ../node_modules/hexo-theme-next themes/next
 
 ### 20年前 (2004年) - Unix系统库管理时期
 
-那时候，软连接主要应用于系统库的版本管理：
+那时候，软连接主要应用于系统库的版本管理。更多关于 Unix 系统的信息可以查看 [Unix 历史](https://zh.wikipedia.org/wiki/UNIX)：
 
 ```bash
 # 系统库的版本管理
@@ -68,7 +70,7 @@ lrwxrwxrwx 1 root root     17 libssl.so.1.0 -> libssl.so.1.0.0
 
 ### 10年前 (2014年) - Web部署版本管理时期
 
-随着Web开发的发展，软连接开始在部署管理中发挥重要作用：
+随着Web开发的发展，软连接开始在部署管理中发挥重要作用。关于现代部署策略，推荐阅读 [蓝绿部署](https://martinfowler.com/bliki/BlueGreenDeployment.html)：
 
 ```bash
 # 网站部署目录结构
@@ -90,7 +92,7 @@ DocumentRoot /var/www/current
 
 ### 现在 (2024年) - Node.js生态系统时期
 
-在现代开发环境中，软连接在包管理和开发工具链中扮演着重要角色：
+在现代开发环境中，软连接在包管理和开发工具链中扮演着重要角色。了解更多可以访问 [npm 官方文档](https://docs.npmjs.com/)：
 
 ```bash
 # 项目结构
@@ -108,7 +110,7 @@ my-project/
 /usr/local/bin/tsc -> ../lib/node_modules/typescript/bin/tsc  # 全局命令链接
 ```
 
-现代容器化环境中，软连接也帮助我们灵活管理配置：
+现代容器化环境中，软连接也帮助我们灵活管理配置。关于 [Docker](https://docs.docker.com/) 的更多信息：
 
 ```bash
 # Docker 容器中的配置文件
@@ -136,9 +138,20 @@ file themes/next
 # 输出示例: themes/next: symbolic link to ../node_modules/hexo-theme-next
 ```
 
+## 参考资源
+
+- [Hexo 官方文档](https://hexo.io/docs/)
+- [NexT 主题文档](https://theme-next.js.org/)
+- [Linux ln 命令详解](https://www.runoob.com/linux/linux-comm-ln.html)
+- [npm 包管理器](https://www.npmjs.com/)
+
 ## 反思与总结
 
 通过这次解决主题路径问题的经历，我深刻体会到软连接技术的价值。它不仅解决了当前的具体问题，更让我了解到这项技术从简单的系统管理工具发展为现代开发中不可缺少的技术基础，特别是在包管理和微服务架构中的重要作用。
 
 每一种技术的存在都有其历史背景和实用价值，理解这些背景有助于我们更好地运用这些工具来解决实际问题。
+
+---
+
+> 如果您对本文有任何疑问或建议，欢迎在评论区交流讨论。
 
